8/27/12 delete InterceptDragHandler, it's a special case of PointDragHandler with x1 fixed at zero
8/27/12 move line manipulator functionality into LineFormsGraphNode base class, because slope-intercept is a special case of point-slope, with x1 fixed at zero
8/27/12 rename LineFormsGraphNode, doc that it's a base class for tabs 1 & 2
8/27/12 doc and cleanup of common classes
8/27/12 doc and cleanup of classes that are specific to tabs 1 & 2
8/27/12 place point tools close together
8/27/12 add orientation to point tool, make one point "up", one point "down"
8/24/12 don't request confirmation for "New Game" button
8/21/12 add assertions to verify x1==0 when we're expecting a slope-intercept line
8/21/12 add assertions to equation factory constructors
8/21/12 simplify placement of slope manipulator for slope-intercept lines
8/21/12 rename methods that deal with add/remove of lines in LineGraphNode, doc
8/21/12 memory leak in list of lines solved by other previous change (updating spinners atomically)
8/21/12 bug fix: update spinners atomically, so that dragging slope manipulator can't create a line with slope=0/0
8/21/12 delete WellDefinedLineProperty, make slope spinners handle avoidance of slope=0/0, add assertion check for slope=0/0 to StraightLine
8/21/12 change order of args to constructors in SpinnerNode hierarchy
8/21/12 more cleanup of equation spinners
8/21/12 generalization and cleanup of equation spinners
8/21/12 fixed StraightLine.same
8/21/12 use color constant for title in control panel
8/21/12 delete RoundedStraightLine class, handle snap-to-grid in drag handlers for line manipulators
8/21/12 fix issues with StraightLine.solveX and solveY
8/20/12 simplify StraightLine model by deleting redundant yIntercept field
8/20/12 bug fix in WellDefinedLineProperty constructor
8/20/12 change LineFormsModel constructor, pass in default line, create property internally
8/20/12 add a zero-arg constructor to GameTimer