@@ -37,9 +37,9 @@ public class SlopeInterceptCanvas extends LineFormsCanvas {
                new SlopeInterceptGraphNode( model.graph, model.mvt,
                                             model.interactiveLine, model.savedLines, model.standardLines,
                                             linesVisible, interactiveLineVisible, interactiveEquationVisible, slopeVisible,
-                                            model.riseRange, model.runRange, model.yInterceptRange ),
+                                            model.riseRange, model.runRange, model.y1Range ),
                new SlopeInterceptEquationControls( model.interactiveLine, model.savedLines,
                                                    interactiveEquationVisible, linesVisible,
-                                                   model.riseRange, model.runRange, model.yInterceptRange ) );
+                                                   model.riseRange, model.runRange, model.y1Range ) );
     }
 }
